--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,11 @@
 <mat-nav-list class="color-nav-list">
     <a mat-list-item routerLink="/admin">
-        <mat-icon>insert_chart_outline</mat-icon>
+        <mat-icon>home</mat-icon>
         <span class="nav-link">Principal</span>
+    </a>
+    <a mat-list-item routerLink="/admin/roles">
+        <mat-icon>verified_user</mat-icon>
+        <span class="nav-link">Roles</span>
     </a>
 
     <a mat-list-item routerLink="/admin/users">
@@ -10,24 +14,39 @@
     </a>
 
     <a mat-list-item routerLink="/admin/categoria">
-            <mat-icon>people</mat-icon>
+            <mat-icon>category</mat-icon>
             <span class="nav-link">Categoría</span>
     
     </a>
     <a mat-list-item routerLink="/admin/producto">
-            <mat-icon>people</mat-icon>
+            <mat-icon>store</mat-icon>
             <span class="nav-link">Producto</span>
     
     </a>
 
     <a mat-list-item routerLink="/admin/proveedor">
-            <mat-icon>people</mat-icon>
+            <mat-icon>local_shipping</mat-icon>
             <span class="nav-link">Proveedor</span>
     
     </a>
     <a mat-list-item routerLink="/admin/pedido">
-            <mat-icon>people</mat-icon>
+            <mat-icon>local_grocery_store</mat-icon>
             <span class="nav-link">Pedido</span>
+    
+    </a>
+    <a mat-list-item routerLink="/admin/compras">
+            <mat-icon>shopping_basket</mat-icon>
+            <span class="nav-link">Compras</span>
+    
+    </a>
+    <a mat-list-item routerLink="/admin/ventas">
+            <mat-icon>store_mall_directory</mat-icon>
+            <span class="nav-link">Ventas</span>
+    
+    </a>
+    <a mat-list-item routerLink="/admin/masvendidos">
+            <mat-icon>favorite</mat-icon>
+            <span class="nav-link">Productos más vendidos</span>
     
     </a>
 
@@ -38,6 +57,11 @@
         <span class="nav-link">Salir</span>
     </a>
    
+  
+
+   
 </mat-nav-list>
+
+
 
 
