--- a/src/app/components/admin/producto/producto.component.html
+++ b/src/app/components/admin/producto/producto.component.html
@@ -4,6 +4,7 @@
     <div class="table-button-row">
 
       <button mat-flat-button class="button-rosado" (click)="onOpenModal()">Crear Producto</button>
+      <button mat-flat-button class="primary" (click)="createPdf()">PDF</button>
       <mat-form-field appearance="outline" class="search-form-field" floatLabel="never">
         <input matInput   placeholder="Buscar" autocomplete="off" (keyup)="applyFilter($event.target.value)"/>
         <!--<button mat-button matSuffix mat-icon-button aria-label="clear" *ngIf="searchKey" (click)="onSearchClear()">
