--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,2 @@
-<p>home works!</p>
-<h1 *ngIf="authService.isLogged | async"> Bienvenido, user </h1>
+
+<h1 *ngIf="authService.isLogged | async"> Bienvenido </h1>
