--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,8 @@
 
+
+<body id="tren">
+  <div class="container  d-flex align-items-center" id="Tren">
 <h1 *ngIf="authService.isLogged | async"> Bienvenido </h1>
+  </div>
+
+</body>
