--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -16,50 +16,56 @@
     <a mat-list-item routerLink="/admin/categoria">
             <mat-icon>category</mat-icon>
             <span class="nav-link">Categoría</span>
-    
+
     </a>
     <a mat-list-item routerLink="/admin/producto">
             <mat-icon>store</mat-icon>
             <span class="nav-link">Producto</span>
-    
+
     </a>
 
     <a mat-list-item routerLink="/admin/proveedor">
             <mat-icon>local_shipping</mat-icon>
             <span class="nav-link">Proveedor</span>
-    
+
     </a>
     <a mat-list-item routerLink="/admin/pedido">
             <mat-icon>local_grocery_store</mat-icon>
             <span class="nav-link">Pedido</span>
-    
+
     </a>
     <a mat-list-item routerLink="/admin/compras">
             <mat-icon>shopping_basket</mat-icon>
             <span class="nav-link">Compras</span>
-    
+
     </a>
     <a mat-list-item routerLink="/admin/ventas">
             <mat-icon>store_mall_directory</mat-icon>
             <span class="nav-link">Ventas</span>
-    
+
     </a>
     <a mat-list-item routerLink="/admin/masvendidos">
             <mat-icon>favorite</mat-icon>
             <span class="nav-link">Productos más vendidos</span>
-    
+
     </a>
 
-    
+    <a mat-list-item routerLink="/admin/banner">
+            <mat-icon>flash_on</mat-icon>
+            <span class="nav-link">Crear publicidad</span>
+
+    </a>
+
+
 
     <a mat-list-item (click)="onExit()">
         <mat-icon>exit_to_app</mat-icon>
         <span class="nav-link">Salir</span>
     </a>
-   
-  
 
-   
+
+
+
 </mat-nav-list>
 
 
