--- a/src/app/components/admin/producto/producto.component.css
+++ b/src/app/components/admin/producto/producto.component.css
@@ -2,11 +2,11 @@
 table{
     width: 95%;
     margin: 0 auto;
-    margin-top: 1rem; 
-    
+    margin-top: 1rem;
+
     table-layout: fixed;
 
-   
+
  }
  th,td{
      overflow: hidden;
@@ -69,7 +69,7 @@ table{
      flex: none;
      width: 7%;
  }
- 
+
 
  .mat-column-idimgproducto{
      flex: none;
@@ -81,9 +81,9 @@ table{
      width: 4%;
  }
 
- .mat-column-nombre{
+ .mat-column-oferta{
      flex: none;
-     width: 3%;
+     width: 4%;
  }
  .mat-column-descripcion{
      flex: none;
@@ -98,9 +98,9 @@ table{
  .search-form-field{
      width: 30%;
      margin-left: 2%;
-    
-     
- 
+
+
+
  }
  .paginator{
      width: 95%;
@@ -113,17 +113,17 @@ table{
  th.mat-header-cell{
      background-color: rgb(54, 190, 88);
      color: rgb(94, 34, 206);
-    
+
      font-weight: bold;
      font-family: Arial;
 
      text-align: left;
      max-width: 300px;
-     
+
  }
 
  .button-yellow{
-     
+
      background-color: rgb(19, 226, 233);
  }
  .button-rosado{
@@ -131,11 +131,11 @@ table{
      background-color: rgb(224, 20, 163);
      width: 15%;
      left:  35px;
-    
+
  }
- 
+
 
  .table-button-row button{
      margin: 12px;
-     
+
  }
