--- a/src/app/components/admin/producto/producto.component.html
+++ b/src/app/components/admin/producto/producto.component.html
@@ -34,19 +34,19 @@
         <td mat-cell *matCellDef="let element" class="center"> {{element.descripcion}} </td>
       </ng-container>
 
-    
-       
-      
+
+
+
       <!-- Name Column -->
       <ng-container  matColumnDef="stock">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> STOCK </th>
         <td  mat-cell *matCellDef="let element"> {{element.stock}} </td>
       </ng-container>
 
-      
+
       <!-- Name Column -->
       <ng-container  matColumnDef="minimo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> MÍNOMO </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> MÍNIMO </th>
         <td  mat-cell *matCellDef="let element"> {{element.minimo}} </td>
       </ng-container>
 
@@ -56,14 +56,14 @@
         <td  mat-cell *matCellDef="let element"> {{element.maximo}} </td>
       </ng-container>
 
-      
+
       <!-- Name Column -->
       <ng-container  matColumnDef="vencimiento">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> VENC </th>
         <td  mat-cell *matCellDef="let element"> {{element.vencimiento}} </td>
       </ng-container>
 
-     
+
 
       <!-- Name Column -->
       <ng-container  matColumnDef="precio">
@@ -71,7 +71,7 @@
         <td  mat-cell *matCellDef="let element"> {{element.precio}} </td>
       </ng-container>
 
-      
+
       <!-- Name Column -->
       <ng-container  matColumnDef="disponible">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> DISPO </th>
@@ -85,16 +85,16 @@
         <td  mat-cell *matCellDef="let element"> {{element.estado}} </td>
       </ng-container>
 
-     
-      
+
+
       <!-- Name Column -->
       <ng-container  matColumnDef="fecha">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> FECHA </th>
         <td  mat-cell *matCellDef="let element"> {{element.fecha}} </td>
       </ng-container>
- 
 
-      <!-- Name Column 
+
+      <!-- Name Column
       <ng-container  matColumnDef="nombreimgprodu">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE IMG </th>
         <td  mat-cell *matCellDef="let element"> {{element.imgproductos[0].nombreimgprodu}} </td>
@@ -103,12 +103,12 @@
       <!-- Name Column -->
       <ng-container  matColumnDef="linkimgprodu">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> IMAGEN </th>
-        <td  mat-cell *matCellDef="let element"> 
-          
+        <td  mat-cell *matCellDef="let element">
+
           <img [src]="URL+element.imgproductos[0].nombreimgprodu" style="width: 50px; height: 50px;"/>
         </td>
       </ng-container>
- 
+
       <!-- Name Column -->
       <ng-container  matColumnDef="peso">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> PESO </th>
@@ -128,33 +128,42 @@
         <td  mat-cell *matCellDef="let element"> {{element.categoria.nombre}} </td>
       </ng-container>
 
-      
+        <!-- Name Column -->
+      <ng-container  matColumnDef="oferta">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>  OFERTA </th>
+        <td  mat-cell *matCellDef="let element"> {{element.oferta}} </td>
+      </ng-container>
 
-     
+
+
+
+
+
       <!-- Name Column -->
       <ng-container  matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="actionCampo"> ACCIONES  </th>
-        <td  mat-cell *matCellDef="let element"> 
+        <td  mat-cell *matCellDef="let element">
           <div class="table-button-row">
             <!--<button mat-raised-button  class="button-yellow" (click)="onOpenModal(element)">Editar</button>
             <button mat-flat-button color="warn" (click)="onDelete(element.idusuario)">Eliminar</button>-->
             <button mat-icon-button  class="button-yellow" (click)="onOpenModal(element)"><mat-icon>edit</mat-icon></button>
             <button mat-icon-button  color="warn" (click)="onDelete(element.idcategoria)"><mat-icon>delete</mat-icon></button>
-          
-          
+            <button mat-icon-button  class="button-yellow" (click)="onOpenModalOferta(element)"><mat-icon>local_offer</mat-icon></button>
+
+
           </div>
-        
+
         </td>
 
-        
-        
-          
-    
+
+
+
+
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      
+
     </table>
     <mat-paginator class="paginator" [pageSizeOptions]="[5,10,25,100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
 
